--- a/Activity1.ipynb
+++ b/Activity1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJ/qw1mKYWG80d8FwVIm/V",
+      "authorship_tag": "ABX9TyPJ6/9LkD9isA6cE/6SRmqd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,169 +32,282 @@
         "import re"
       ],
       "metadata": {
-        "id": "fVz2NJ-d5nC0"
+        "id": "fWywv9T1A2-S"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 2,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
-        "id": "NZkw1LDf27V1",
-        "outputId": "02420f35-5e28-4044-d5bc-2cf90a31d53f"
+        "id": "vVBVQHB2AhXp",
+        "outputId": "3488d3b4-bbc5-4b66-9bed-1db133e99ebe"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "TEXT NORMALIZATION\n",
             "\n",
-            "STRIPPED:\n",
-            " UnBeLiEvAbLy... the EXPLORERS found it!!!\n",
-            "LOWERCASED:\n",
-            " unbelievably... the explorers found it!!!\n",
-            "ORIGINAL:\n",
-            "    UnBeLiEvAbLy... the EXPLORERS found it!!!    \n",
-            "CLEANED:\n",
-            " unbelievably the explorers found it\n"
+            "\"UNBELIEVABLY... the driver, Alex, arrivED on 12/05/2024! \n",
+            "He was super helpful. However, the ride cost $45.50 which is pricey. \n",
+            "Contact support@taxi-tech.com or call (555) 019-2834 for refunds. \n",
+            "I was unhappy with the wait time though.\"\n",
+            "\n"
           ]
         }
       ],
       "source": [
-        "print(\"TEXT NORMALIZATION\\n\")\n",
-        "raw_text = \"   UnBeLiEvAbLy... the EXPLORERS found it!!!    \"\n",
-        "Step1 = raw_text.strip()\n",
-        "print(\"STRIPPED:\\n\",Step1)\n",
-        "Step2 = Step1.lower()\n",
-        "print(\"LOWERCASED:\\n\",Step2)\n",
-        "Step3 = re.sub(r\"[^\\w\\s]\", \"\", Step2)\n",
-        "print(f\"ORIGINAL:\\n\",raw_text)\n",
-        "print(f\"CLEANED:\\n\",Step3)\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"MORPHOLOGY(Finding Word Patterns)\\n\")\n",
-        "text_morph = \"The active students started acting like actors. They were unhappy and disorganized.\"\n",
-        "root_pattern = r\"\\bact\\w*\\b\"\n",
-        "matches_act = re.findall(root_pattern, text_morph)\n",
-        "print(f\"1. Words sharing the root 'act': {matches_act}\")\n",
-        "negation_pattern = r\"\\b(?:un|dis)\\w+\\b\"\n",
-        "negations = re.findall(negation_pattern, text_morph)\n",
-        "print(f\"2. Words with negative prefixes: {negations}\")\n",
-        "agent_pattern = r\"\\b\\w+[eo]r\\b\"\n",
-        "agents = re.findall(agent_pattern, text_morph)\n",
-        "print(f\"3. Words representing 'Agents' (doers): {agents}\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7sSTGSQX6zCw",
-        "outputId": "c8b63a11-4579-4983-f6d1-92d5dba5b8db"
-      },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "MORPHOLOGY(Finding Word Patterns)\n",
-            "\n",
-            "1. Words sharing the root 'act': ['active', 'acting', 'actors']\n",
-            "2. Words with negative prefixes: ['unhappy', 'disorganized']\n",
-            "3. Words representing 'Agents' (doers): []\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"EXTACTING REAL-WORLD DATA(comples regex)\\n\")\n",
-        "social_data = \"\"\"\n",
-        "Post 1: Loving the new #AI course!\n",
-        "Post 2: Contact support@rvu.edu.in for help.\n",
-        "Post 3: Call 555-0199 or (555) 123-4567 for emergency.\n",
-        "\"\"\"\n",
-        "hashtags = re.findall(r\"#\\w+\",social_data)\n",
-        "print(f\"1. Hashtags: {hashtags}\")\n",
-        "emails = re.findall(r\"[\\w\\.-]+@[\\w\\.-]+\", social_data)\n",
-        "print(\"Emails:  \", emails)\n",
-        "phone_pattern = r\"\\(?\\d{3}\\)?[-\\s]?\\d{3}[-\\s]?\\d{4}\"\n",
-        "phones = re.findall(phone_pattern, social_data)\n",
-        "print(\"Phones:  \", phones)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QMtfR27q8YjN",
-        "outputId": "eefed1ec-8519-4ffc-c9ef-ee7d4605859c"
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "EXTACTING REAL-WORLD DATA(comples regex)\n",
-            "\n",
-            "1. Hashtags: ['#AI']\n",
-            "Emails:   ['support@rvu.edu.in']\n",
-            "Phones:   ['(555) 123-4567']\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"LAB CHALLENGE\\n\")\n",
         "data = \"\"\"\n",
-        "REPORT: On 12/05/2024, the Client purchasED\n",
-        "a gold plan for $250.50. It was approveD on 13/05/2024.\n",
+        "\"UNBELIEVABLY... the driver, Alex, arrivED on 12/05/2024!\n",
+        "He was super helpful. However, the ride cost $45.50 which is pricey.\n",
+        "Contact support@taxi-tech.com or call (555) 019-2834 for refunds.\n",
+        "I was unhappy with the wait time though.\"\n",
         "\"\"\"\n",
-        "print(f\"Raw Data:{data}\")\n",
-        "norm_data = data.upper()\n",
-        "print(f\"1. Normalized: {norm_data.replace(chr(10), ' ')}\")\n",
-        "dates = re.findall(r\"\\d{2}/\\d{2}/\\d{4}\",norm_data)\n",
-        "print(f\"2. Dates Found: {dates}\")\n",
-        "past_tense = re.findall(r\"\\b\\w+ed\\b\", norm_data)\n",
-        "print(f\"3. Past Tense Actions: {past_tense}\")\n",
-        "prices = re.findall(r\"\\$\\d+(?:\\.\\d+)?\", data)\n",
-        "print(f\"4. Prices: {prices}\")"
+        "print(data)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "norm = data.lower()\n",
+        "norm2 = re.sub(r\"\\.{2,}\", \"\", norm)\n",
+        "print(norm2)\n",
+        "norm3 = re.sub(r\"\\!\",\"\",norm2)\n",
+        "print(norm3)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
-        "id": "yN4DC-mO9jcr",
-        "outputId": "d442e5f4-70e0-46dc-cc2a-ca800ce5bfe0"
+        "id": "x8HFYnKfA6Jt",
+        "outputId": "9d1ce73c-7421-48bc-8df0-824662064221"
       },
-      "execution_count": 18,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "LAB CHALLENGE\n",
             "\n",
-            "Raw Data:\n",
-            "REPORT: On 12/05/2024, the Client purchasED\n",
-            "a gold plan for $250.50. It was approveD on 13/05/2024.\n",
+            "\"unbelievably the driver, alex, arrived on 12/05/2024! \n",
+            "he was super helpful. however, the ride cost $45.50 which is pricey. \n",
+            "contact support@taxi-tech.com or call (555) 019-2834 for refunds. \n",
+            "i was unhappy with the wait time though.\"\n",
             "\n",
-            "1. Normalized:  REPORT: ON 12/05/2024, THE CLIENT PURCHASED A GOLD PLAN FOR $250.50. IT WAS APPROVED ON 13/05/2024. \n",
-            "2. Dates Found: ['12/05/2024', '13/05/2024']\n",
-            "3. Past Tense Actions: []\n",
-            "4. Prices: ['$250.50']\n"
+            "\n",
+            "\"unbelievably the driver, alex, arrived on 12/05/2024 \n",
+            "he was super helpful. however, the ride cost $45.50 which is pricey. \n",
+            "contact support@taxi-tech.com or call (555) 019-2834 for refunds. \n",
+            "i was unhappy with the wait time though.\"\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dates = re.findall(r\"\\b\\d{2}/\\d{2}/\\d{4}\\b\", norm3)\n",
+        "print(f\"Dates Found: {dates}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        },
+        "id": "-G0K9QoTGw0b",
+        "outputId": "38705a18-a29c-417d-a176-ca0406dd1934"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dates Found: ['12/05/2024']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prices = re.findall(r\"\\$\\d+(?:\\.\\d+)?\", norm3)\n",
+        "print(f\"Prices Found: {prices}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        },
+        "id": "I439of8LDQwD",
+        "outputId": "a180cb0c-4f2a-418d-e370-c586a9af2d58"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Prices Found: ['$45.50']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "emails = re.findall(r\"\\b[\\w\\.-]+@[\\w\\.-]+\\.\\w+\\b\", norm3)\n",
+        "print(f\"Emails Found: {emails}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        },
+        "id": "KDpnHIuwD-Xu",
+        "outputId": "6096686e-83ad-47f7-e5cc-f5b44fda32f6"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Emails Found: ['support@taxi-tech.com']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "phones = re.findall(r\"\\(\\d{3}\\)\\s\\d{3}-\\d{4}\", norm3)\n",
+        "print(f\"Phone Numbers Found: {phones}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        },
+        "id": "gRvIPDfHEyu1",
+        "outputId": "43774a8e-50be-4ea2-e4c2-520e49743fc6"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Phone Numbers Found: ['(555) 019-2834']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "agents = re.findall(r\"\\b\\w+er\\b\", norm3)\n",
+        "print(f\"Agents (Doer): {agents}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        },
+        "id": "kxLhIyy_HuYz",
+        "outputId": "fc7ef44e-a6b2-4113-c934-4bea2cfe8859"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Agents (Doer): ['driver', 'super', 'however']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "past_tense = re.findall(r\"\\b\\w+ed\\b\", norm3)\n",
+        "print(f\"Past Tense Actions: {past_tense}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        },
+        "id": "3EHAlhA1H0k3",
+        "outputId": "6a1e0a1c-5abf-4e90-83aa-8fcac64bcd4b"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Past Tense Actions: ['arrived']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "negation_pattern = r\"\\b(?:un|dis)\\w+\\b\"\n",
+        "negations = re.findall(negation_pattern, norm3)\n",
+        "print(f\"Words with negative prefixes: {negations}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        },
+        "id": "EdbwdYgMIB3-",
+        "outputId": "27584e6d-c8ff-4cc5-99ca-471dc1148aff"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Words with negative prefixes: ['unbelievably', 'unhappy']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "phones_bonus = re.findall(r\"(?:\\(\\d{3}\\)|\\d{3})[-\\s]\\d{3}-\\d{4}\", norm3)\n",
+        "print(f\"Phone Numbers (Bonus – Both Formats): {phones_bonus}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        },
+        "id": "yRuM-4gnIp6d",
+        "outputId": "395c5b13-3068-428e-d9f0-d0b7449d74ec"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Phone Numbers (Bonus – Both Formats): ['(555) 019-2834']\n"
           ]
         }
       ]
@@ -203,9 +316,9 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "PsZpKnIR-_8V"
+        "id": "n_VNXL0IIuPl"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     }
   ]
